# libserdes

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  serdes.hpp
include/: deser.hpp  extend_traits.hpp  helpers.hpp  ser.hpp  typedefs.hpp
tests/: test.cpp  test_class.cpp  test_class.hpp
